Updated the system properties to handle channel sends Fixed a bug in the CPU task Updated the error reporting for JoinChannel Added additional debugging to the RemoteMethod handler Added a toString() for the method profiles in TaskFactory Updated the connection and disconnection messages in MasterTask Updated the JVM args to the server target in build.xml Added a new target for stress testing using the a custom client in build.xml