@@ -18,7 +18,7 @@
   <property name="lib.dir" location="lib"/>
 
   <!-- Values for controlling compilation -->
-  <property name="javac.source" value="1.5"/>
+<!--  <property name="javac.source" value="1.6"/> -->
   <property name="javac.compilerargs"
 	    value="-Xlint"/>
 
@@ -103,7 +103,7 @@
 	    closure="true"/>
     <javac includeAntRuntime="no" debug="on" deprecation="on"
            srcdir="src/shared/j2se" destdir="${build.dir}/classes/shared"
-           classpathref="shared.classpath" source="${javac.source}">
+           classpathref="shared.classpath" >
       <compilerarg value="${javac.compilerargs}"/>
     </javac>
   </target>
@@ -120,7 +120,7 @@
 	    closure="true"/>
     <javac includeAntRuntime="no" debug="on" deprecation="on"
            srcdir="src/server/j2se" destdir="${build.dir}/classes/server"
-           classpathref="server.classpath" source="${javac.source}">
+           classpathref="server.classpath" >
       <compilerarg value="${javac.compilerargs}"/>
     </javac>
   </target>
@@ -135,7 +135,7 @@
 	    closure="true"/>
     <javac includeAntRuntime="no" debug="on" deprecation="on"
            srcdir="src/client/j2se" destdir="${build.dir}/classes/client"
-           classpathref="client.classpath" source="${javac.source}">
+           classpathref="client.classpath" >
       <compilerarg value="${javac.compilerargs}"/>
     </javac>
   </target>
@@ -500,7 +500,7 @@
       <javac srcdir="etc/checkstyle" destdir="${build.dir}/classes/checkstyle"
 	     classpath="${checkstyle.jar}" includeAntRuntime="no"
 	     debug="${build.debug}" debuglevel="${build.debug.level}"
-	     source="${javac.source}">
+	     >
 	<compilerarg line="${javac.compilerargs}"/>
       </javac>
       <taskdef resource="checkstyletask.properties"
@@ -699,7 +699,7 @@
 	   destdir="${build.dir}/test/classes/shared"
 	   includeAntRuntime="yes"
 	   debug="on"
-	   source="${javac.source}"
+	   
 	   classpathref="shared.classpath"
 	   includes="**/*.java">
       <compilerarg value="${javac.compilerargs}"/>
@@ -716,7 +716,7 @@
 	   destdir="${build.dir}/test/classes/server"
 	   includeAntRuntime="yes"
 	   debug="on"
-	   source="${javac.source}"
+	   
 	   classpathref="server.classpath"
 	   includes="**/*.java">
       <compilerarg value="${javac.compilerargs}"/>
@@ -733,7 +733,7 @@
 	   destdir="${build.dir}/test/classes/client"
 	   includeAntRuntime="yes"
 	   debug="on"
-	   source="${javac.source}"
+	   
 	   classpathref="client.classpath"
 	   includes="**/*.java">
       <compilerarg value="${javac.compilerargs}"/>
@@ -830,7 +830,7 @@
 	    closure="true"/>
     <javac destdir="${build.dir}/example/classes"
 	   debug="on"
-	   source="${javac.source}">
+	   >
       <src>
         <dirset dir="example" includes="*/src"/>
       </src>
@@ -853,7 +853,7 @@
 	    closure="true"/>
     <javac destdir="${build.dir}/benchmark/classes"
 	   debug="on"
-	   source="${javac.source}">
+	   >
       <src>
         <dirset dir="benchmark" includes="src"/>
       </src>
@@ -904,13 +904,21 @@
 	 description="run a set of example benchmark applications">
    <delete dir="/tmp/sgs-benchmark"/>
    <mkdir dir="/tmp/sgs-benchmark"/>
+   <chmod perm="a+w">
+     <fileset dir="/tmp/sgs-benchmark"/>
+   </chmod>
    <mkdir dir="/tmp/sgs-benchmark/dsdb"/>
    <java classname="com.sun.sgs.impl.kernel.Kernel"
 	 fork="true">
      <jvmarg line="-server"/>
+<!--     <jvmarg line="-XX:+ExtendedDTraceProbes"/> -->
      <jvmarg line="-XX:+UseParallelGC"/>
-     <jvmarg line="-XX:NewSize=128m"/>
      <jvmarg line="-XX:+UseFastAccessorMethods"/>
+     <jvmarg line="-XX:+AggressiveOpts"/>
+     <jvmarg line="-XX:+MaxFDLimit"/>
+     <jvmarg line="-XX:NewSize=512m"/>
+     <jvmarg line="-Xmx2g"/>
+     <jvmarg line="-XX:+PrintCompilation"/>
      <sysproperty key="com.sun.sgs.config.file"
 		  file="benchmark/System.properties"/>
      <sysproperty key="java.library.path" 
@@ -919,8 +927,8 @@
 		  file="${test.logging}"/>
      <sysproperty key="com.sun.sgs.benchmark.app"
 		  file="benchmark/DefaultApplication.properties"/>
-<!--     <sysproperty key="com.sun.sgs.impl.service.data.store.DataStoreImpl.remove.logs"
-		  value="true"/>     -->
+     <sysproperty key="com.sun.sgs.impl.service.data.store.DataStoreImpl.remove.logs"
+		  value="true"/>
      <classpath>
        <pathelement location="${build.dir}/benchmark/classes"/>
        <path refid="server.classpath"/>
@@ -934,7 +942,12 @@
 	 description="Runs the benchmark client">
    <java classname="com.sun.sgs.benchmark.client.BenchmarkClient"
 	 fork="true">
-      <jvmarg line="${test.jvm.args}"/>
+     <jvmarg line="${test.jvm.args}"/>
+     <jvmarg line="-server"/>
+     <jvmarg line="-XX:+UseParallelGC"/>
+     <jvmarg line="-XX:NewSize=128m"/>
+     <jvmarg line="-Xmx2g"/>
+     <jvmarg line="-XX:+UseFastAccessorMethods"/>
       <sysproperty key="com.sun.sgs.config.file"
            file="${test.logging}"/>
       <classpath>
@@ -943,14 +956,40 @@
         <path refid="server.classpath"/>
       </classpath>
       <sysproperty key="BenchmarkClient.host"
-                   value="foghorn.east.sun.com" />
+                   value="slytherin.east.sun.com" />
       <sysproperty key="BenchmarkClient.port"
                    value="6168" />
     </java>
   </target>
 
-  <!-- Runs the example HackApp (server) -->
-  <target name="example-hack-app" depends="example-classes"
+ <!-- Runs the benchmark client -->
+ <target name="benchmark-client-stresstest" depends="benchmark-classes"
+	 description="Runs the benchmark client">
+   <!-- insert classname to run below -->
+   <!-- <java classname="com.sun.sgs.benchmark.client.ChannelBomb"
+	fork="true"> -->
+     <jvmarg line="${test.jvm.args}"/>
+     <jvmarg line="-server"/>
+     <jvmarg line="-XX:+UseParallelGC"/>
+     <jvmarg line="-Xmx2g"/>
+     <jvmarg line="-XX:+MaxFDLimit"/>
+      <sysproperty key="com.sun.sgs.config.file"
+           file="${test.logging}"/>
+      <classpath>
+        <pathelement location="${build.dir}/classes/client"/>
+        <pathelement location="${build.dir}/benchmark/classes"/>
+        <path refid="server.classpath"/>
+      </classpath>
+      <sysproperty key="BenchmarkClient.host"
+                   value="slytherin.east.sun.com" />
+      <sysproperty key="BenchmarkClient.port"
+                   value="6168" />
+    </java>
+  </target>
+
+
+ <!-- Runs the example HackApp (server) -->
+ <target name="example-hack-app" depends="example-classes"
           description="Runs the example HackApp (server)">
     <mkdir dir="/tmp/HackApp/dsdb"/>
     <copy todir="/tmp/HackApp/gameData">
